<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".AddClientActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_last_name"


        />

    <EditText
        android:id="@+id/add_client_last_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client_gender" />

    <RadioGroup
        android:id="@+id/add_client_gender_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/add_client_gender_man_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_man" />

        <RadioButton
            android:id="@+id/add_client_gender_woman_radiobutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_woman" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Age" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            tools:text="32"
            android:id="@+id/add_client_age_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <SeekBar
            tools:progress="32"
            android:id="@+id/add_client_age_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Niveau"/>

    <Spinner
        android:id="@+id/add_client_level_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/levels"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/add_client_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button" />
</LinearLayout>